<resources>
    <string name="app_name">PlayTask</string>
    <string name="string_item_name">item name</string>
    <string name="EditText_name" />
    <string name="String_ok">YES</string>
    <string name="String_no">NO</string>
    <string name="string_book_name">Book name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookname1" />
    <string name="string_ok" />
    <string name="addNewTask">添加任务</string>
    <string name="task_name">任务名</string>
    <string name="task_point">任务点数</string>
    <string name="task_edit_ok">完成</string>
    <string name="task_item_name">任务名</string>
    <string name="task_num_add" />
    <string name="task_num_finish1" />
    <string name="task_num1" />
    <string name="task_tag_now" />
    <string name="task_num_finish">任务时长</string>
    <string name="task_time">任务时长</string>
    <string name="task_num_point">任务点数</string>
    <string name="name">ToNokman</string>
    <string name="title_activity_reward_details">RewardDetailsActivity</string>
    <string name="addNewReward">添加奖励</string>
    <string name="reward_name">奖励名</string>
    <string name="reward_point">奖励点数</string>
    <string name="reward_item_title">奖励名</string>
    <string name="reward_num_point">奖励点数</string>
    <string name="reward_num">单次/多次</string>
    <string name="reward_title_now" />
    <string name="task_title_now" />
</resources>