<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/holo_blue_bright"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gobackButton"
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/goback_foreground" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/addNewTask"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTaskPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/task_point"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTaskTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/task_time"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerTaskType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:entries="@array/task_types" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_edit_ok" />



</LinearLayout>